se cambian las rutas de las imagenes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="./app.js"></script>
+    <script defer src="app.js"></script>
   </head>
   
   <body class="bg-[#232946] text-[#232946] h-screen flex justify-center items-center">
